<resources>
    // App core
    <string name="app_name">Swapi - Cambia tu Dieta</string>
    <string name="error_popup_title">¡Ups!</string>
    <string name="error_popup_text">Ocurrió un error inesperado. Reinicia la aplicación e inténtalo de nuevo.</string>
    <string name="error_popup_ok">OK</string>
    <string name="dietitian_popup_title">¿Necesitas Asesoría Profesional?</string>
    <string name="dietitian_popup_text">Contacta con nuestra Dietista Mónica Barrera para un Plan Personalizado.</string>
    <string name="back">VOLVER</string>
    <string name="back_icon_description">Icono de flecha atrás</string>
    <string name="reset_icon_description">Icono de reset</string>
    <string name="info_icon_description">Icono de información</string>
    <string name="dietitian_icon_description">Icono de dietista</string>
    <string name="instagram_icon_description">Icono de Instagram</string>
    <string name="default_icon_description">Icono</string>
    <string name="instagram_icon_text">Instagram</string>
    <string name="email_icon_description">Icono de Email</string>
    <string name="email_icon_text">Email</string>
    <string name="monica_instagram_url">https://www.instagram.com/monicabr_dietista/</string>
    <string name="email_address">monicabarrerarobles@gmail.com</string>

    // Categories screen
    <string name="happy_watermelon_icon_description">Imagen de una sandía feliz.</string>
    <string name="categories_screen_message">¡Bienvenid@ a Swapi! Para empezar, elige la categoría del alimento que te gustaría cambiar en tu dieta.</string>
    <string name="bold_colored_swapi">Swapi</string>
    <string name="bold_colored_category">categoría</string>
    <string name="categories_screen_button_text">CATEGORÍAS</string>

    // Food selection screen
    <string name="food_icon_description">Imagen de alimento.</string>
    <string name="food_selection_screen_message">Ahora elige el alimento que quieres cambiar en tu dieta. El que NO te apetece comer hoy.</string>

    // Food amount selection screen
    <string name="food_amount_selection_screen_message">¡Casi hemos terminado! Dime cuánta cantidad de este alimento ibas a consumir. Después, pulsa en Calcular equivalencias.</string>
    <string name="bold_colored_calculate_equivalences">Calcular equivalencias</string>
    <string name="food_amount_selection_screen_button_text">¡Calcular Equivalencias!</string>
    <string name="invalid_food_amount_error">La cantidad introducida es incorrecta</string>

    // Result screen
    <string name="selected_food_icon_description">Imagen de alimento seleccionado.</string>
    <string name="food_result_screen_message">¡El resultado está listo! %1$s %2$s de %3$s equivalen a…</string>
    <string name="bold_colored_food_result_screen_message">%1$s %2$s de %3$s</string>
    <string name="food_result">%1$s %2$s de %3$s</string>
</resources>